# dropkit

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  hatch_build.py  lint.sh  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/skills/git-worktrees/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  e2e.yml
dropkit/: __init__.py  api.py  cloudinit.py  config.py  lock.py  main.py  ssh_config.py  ui.py  version_check.py
dropkit/templates/: default-cloud-init.yaml  token-helper.html
tests/: __init__.py  test_api.py  test_cloudinit.py  test_config.py  test_json_output.py  test_list.py  test_lock.py  test_main_helpers.py  test_rename.py  test_setup_claude.py  test_ssh_config.py  test_tailscale.py  test_version_check.py
tests/e2e/: test_lifecycle.sh
tobcloud/: __init__.py  api.py  cloudinit.py  config.py  lock.py  main.py  ssh_config.py  ui.py  version_check.py
tobcloud/templates/: default-cloud-init.yaml
